deploy/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bwhazel-site
spec:
  selector:
    matchLabels:
      app: bwhazel-site
  template:
    metadata:
      labels:
        app: bwhazel-site
    spec:
      containers:
      - name: bwhazel-site
        image: bwhazel/bwhazel-site
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
